<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:context=".MapsActivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/fabbtn"
        android:src="@drawable/baseline_location_pin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/fabShape" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/addMarkers"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="@dimen/_20sdp"-->
<!--        android:layout_marginBottom="@dimen/_40sdp"-->
<!--        android:contentDescription="@string/fabbtn"-->
<!--        android:src="@drawable/baseline_add_location_alt_24"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:shapeAppearanceOverlay="@style/addLocationfab" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/fabbtn"
        android:foregroundGravity="left"
        android:src="@drawable/baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintWidth_percent=".14"
        app:shapeAppearanceOverlay="@style/addLocationfab" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/optionsCard"
        style="@style/optons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@id/currentLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".98"
        app:layout_constraintWidth_percent=".58">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/clearMarker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_2sdp"
                android:autoSizeTextType="uniform"
                android:padding="@dimen/_3sdp"
                android:text="@string/clear_marker"
                app:layout_constraintEnd_toStartOf="@id/clearAllMarker"
                app:layout_constraintDimensionRatio="16:10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/clearAllMarker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_2sdp"
                android:autoSizeTextType="uniform"
                android:padding="@dimen/_3sdp"
                android:text="@string/clear_all_markers"
                app:layout_constraintEnd_toStartOf="@id/close_marker"
                app:layout_constraintDimensionRatio="16:10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/clearMarker" />

            <TextView
                android:id="@+id/close_marker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/_2sdp"
                android:autoSizeTextType="uniform"
                android:padding="@dimen/_3sdp"
                android:text="@string/close_marker_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="16:10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/clearAllMarker" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cancelCard"
        style="@style/optons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".96"
        app:layout_constraintWidth_percent=".3">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/cancelDottedCalculation"
                android:text="@string/cancel"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/live_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:elevation="@dimen/_5sdp"
        android:textStyle="bold"
        android:checked="true"
        android:text="@string/go_live"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3"
        app:layout_constraintVertical_bias=".06"

        app:layout_constraintHorizontal_bias=".1"/>

</androidx.constraintlayout.widget.ConstraintLayout>